--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,15 @@
 .idea/**/dbnavigator.xml
 *.DotSettings
 *.DotSettings.*
+
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+bld/
+[Bb]in/
+[Oo]bj/
+[Ll]og/
+
